--- a/package.json
+++ b/package.json
@@ -9,19 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^5.4.2",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "leaflet": "^1.9.4",
+    "next": "13.5.4",
+    "next-auth": "^4.23.2",
+    "next-cloudinary": "^4.24.0",
+    "query-string": "^8.1.0",
     "react": "^18",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.7",
+    "react-spinners": "^0.13.8",
+    "world-countries": "^5.0.0",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.6",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.5",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "postcss": "^8",
+    "prisma": "^5.4.2",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
